3.0.6
	+ Set proper permissions to preferences file when QA updates are
	  not exclusive
3.0.5
	+ Fixed wrong management of preferences files
3.0.4
	+ Improved description of enable automatic updates string
	+ Force mode when restoring apt preferences file from cloud
3.0.3
	+ Adapted firstTimeMenu() for Disaster Recovery
	+ Added workaround for launchpad bug 994509, which manifests
	  showing duplicate packages in the updates list
	+ Hide enable automatic updates form when it cannot be used
	+ Errors when getting packages dependencies are displayed, this
	  fixes the empty dialog on error problem
3.0.2
	+ Make required changes for new communications add-on
	  (mailfilter in community + jabber and asterisk in comm add-on)
3.0.1
	+ Fixed basic mode boxes behavior when adding/removing individual packages
	+ Fixed behavior of select/deselect all buttons in Zentyal components
3.0
	+ Changed del.mas template to allow call InstallPkgs url form
	  other modules
	+ Fixed System updates page
	+ Updated Zentyal Remote logo in slides
	+ Add 3.0 extra repository instead of 2.3 one
	+ Reviewed registration strings
	+ Deleted unused images
2.3.9
	+ Do not show final notes in installation process
	+ Fixed cancel button in confirm software packages in install process
	+ New slides format
2.3.8
	+ Use delete icon instead of deny for deselect all button
	+ New installation finished page
2.3.7
	+ Improved styles and icons
	+ UTM is now integrated in Gateway and Infrastructure
	+ Do not try to translate package description variable
	+ Added popups for progress bars
	+ Added logic for new mail add-on for SB edition
2.3.6
	+ Added package icon for the UPS module
	+ Increased timeout before redirecting to wizards from 1 to 5 seconds
	  to avoid problems on some slow or loaded machines
	+ Use again the non-customized Progress CGI which is now compatible
2.3.5
	+ Fixed regression with modal box save changes
2.3.4
	+ Remove redirection to save changes page after removing packages