@@ -1,3 +1,5 @@
+HEAD
+	+ Remove restricted modules to get info
 3.0.6
 	+ Set proper permissions to preferences file when QA updates are
 	  not exclusive
